adjust home page list

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,8 +2,18 @@
 
 <body>
     {{ partial "header.html" . }}
-    {{ partial "list.html" . }}
+    <ul class="list control">
+        {{ $paginator := .Paginate (where .Pages "Params.hidden" "!=" true) }}
+        {{ range $paginator.Pages }}
+        <li class="item">
+            <span class="date">{{ .PublishDate.Format "01-02" }}</span>
+            <a class="btn" href="{{ .Permalink }}"> {{ .Title }} </a>
+        </li>
+        {{ end }}
+    </ul>
+    {{ partial "pagination.html" .}}
     {{ partial "footer.html" .}}
     {{ partial "js.html" . }}
 </body>
+
 </html>
