--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <body>
     {{ partial "header.html" . }}
-    {{ partial "list.html" . }}
+    {{ partial "posts.html" . }}
     {{ partial "footer.html" .}}
     {{ partial "js.html" . }}
 </body>
