--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    {{ $.Hugo.Generator }}
+    {{ hugo.Generator }}
     <!-- Permalink & RSSlink -->
     <link rel="canonical" href="{{ .Permalink }}" />
     <meta name="description" content="{{ .Site.Params.Description }}">
